Fix dragging on mobile 	modified:   sketch.js
	modified:   sketch.js
	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ button:hover {
     background-color: white;
     box-shadow: 0px 0px 7px #817f7f;
     user-select: none;
+    touch-action: none;
 }
 
 #colorpicker {
